Added direct state framebuffer functionality